# penrose-example

./: .gitignore  meson.build
data/shaders/: default-forward-rendering.frag  default-forward-rendering.vert
src/: Main.cpp
subprojects/: penrose.wrap
